--- a/css/components/button.css
+++ b/css/components/button.css
@@ -5,3 +5,8 @@
     border-radius: 50px;
     color: white;
 }
+
+.btn-primary:hover {
+    background-color: #7e89da;
+    transition: background-color 0.5s;
+}
